# harness

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  IDEAS.md  LICENSE  PROGRESS_LOG.md  README.md  ROADMAP.md  SECURITY.md  electron-builder.js  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.js  vite.config.ts  vitest.config.ts
backend/: .env.example  README.md  package-lock.json  package.json  render.yaml
docs/: 4PX_GRID.md  UI_TRANSITION_AUDIT.md
e2e/: MANUAL.md  app.spec.ts  core-ux.spec.ts  dataloss.spec.ts  global-setup.cjs  helpers.ts  (+2 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant_tools.rs  canonical_json.rs  chat.rs  commands.rs  conversation_title.rs  credentials.rs  customization.rs  dictation_recording_index.rs  env_util.rs  file_tools.rs  fn_monitor.rs  global_recording.rs  global_recording_capture.rs  global_recording_effects.rs  global_recording_session.rs  images.rs  import.rs  lib.rs  main.rs  memory.rs  memory_compile.rs  memory_facts.rs  memory_import.rs  mic_permission.rs  note_print.rs  notes.rs  openai.rs  paths.rs  plans.rs  recent_conversations.rs  recording.rs  remote_store.rs  settings.rs  sticky_notes.rs  storage.rs  sync.rs  sync_bundle.rs  sync_merge.rs  system.rs  system_prompt.rs  (+3 more)
src-tauri/src/chat/: stream.rs  tool.rs  turn.rs
(+482 files in other folders)
