[package]
name = "harness"
version = "0.7.6"
description = "Personal all-in-one desktop harness for LLMs"
authors = ["Your Name"]
edition = "2021"

[lib]
name = "harness_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-s3 = "0.35"
flate2 = "1"
keyring = { version = "3", features = ["apple-native"] }
arboard = "3"
dirs = "6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
async-trait = "0.1"
iana-time-zone = "0.1"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
rand = "0.8"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = "0.3"
core-foundation = "0.10"
urlencoding = "2"
url = "2"
cpal = "0.18.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
